--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,21 @@
 services:
+  api:
+    build: .
+    image: financer-api:0.1
+    environment:
+      JWT_SECRET: ${JWT_SECRET}
+    depends_on:
+      db:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "curl http://api:3000/v1/api/health"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    ports:
+      - "3000:3000"
+    networks:
+      - internal
   db:
     image: postgres:17.6-alpine3.22
     restart: always
@@ -8,6 +25,11 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_DB: ${POSTGRES_DB}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     volumes:
       - ./data:/var/lib/postgresql/data
     networks:
