--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,46 +2,37 @@ services:
   api:
     build: .
     image: financer-api:0.1
+    env_file: .env
     environment:
       JWT_SECRET: ${JWT_SECRET}
     depends_on:
       db:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl http://api:3000/v1/api/health"]
+      test: ['CMD-SHELL', 'curl http://api:3000/v1/api/health']
       interval: 5s
       timeout: 5s
       retries: 5
     ports:
-      - "3000:3000"
+      - '3000:3000'
     networks:
       - internal
   db:
     image: postgres:17.6-alpine3.22
     restart: always
     ports:
-      - "5432:5432"
+      - '5432:5432'
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_DB: ${POSTGRES_DB}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}']
       interval: 5s
       timeout: 5s
       retries: 5
     volumes:
       - ./data:/var/lib/postgresql/data
-    networks:
-      - internal
-  jaeger:
-    image: jaegertracing/jaeger:latest
-    ports:
-      - "16686:16686"
-      - "4317:4317"
-      - "4318:4318"
-    environment:
-      - LOG_LEVEL=debug
     networks:
       - internal
 networks:
